# Contact-Manager

./: .gitignore  CMakeLists.txt  README.md  contact_manager_qt.cpp
